@@ -23,6 +23,7 @@ NOTICE: Restart wiseService before capture when upgrading
 NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading
 
 3.1.1 2021/11/xx
+  - all - deal with usersElasticsearch being an array better
 
 3.1.0 2021/10/04
   - all - support float field type
